--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -75,6 +75,7 @@ services:
   # Planetscale
   # From https://github.com/prisma/prisma-engines/blob/976a00ae3c30ab9507fa742986c9c6f5327ba10f/docker-compose.yml
   # https://vitess.io/docs/18.0/get-started/vttestserver-docker-image/
+  # mysql -h localhost -P 33807 --protocol=TCP -u root -p
   vitess-8:
     image: custom-vitess
     restart: unless-stopped
